# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import authRouter from "./auth";
 import storageRouter from "./storage";
 import usersRouter from "./users";
+import categoriesRouter from "./categories";
 import documentsRouter from "./documents";
 import chatRouter from "./chat";
 
@@ -12,6 +13,7 @@ router.use(healthRouter);
 router.use(authRouter);
 router.use(storageRouter);
 router.use(usersRouter);
+router.use(categoriesRouter);
 router.use(documentsRouter);
 router.use(chatRouter);
 
